--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "homepage": "https://github.com/eifil/amt-ipld#readme",
   "dependencies": {
-    "cids": "^1.1.5"
+    "@ipld/dag-cbor": "^3.0.0",
+    "multiformats": "^4.5.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.14.1",
