--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc --project tsconfig.build.json",
     "test": "npm run test:build && npm run test:ava",
     "test:build": "tsc --project tsconfig.test.json",
-    "test:ava": "ava --verbose 'dist/**/*.spec.js' --timeout=30s",
+    "test:ava": "ava --verbose 'dist/**/*.spec.js' --timeout=1m",
     "lint": "standard 'src/**/*.ts'",
     "coverage": "c8 npm test && c8 report --reporter lcov --reporter html"
   },
