--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multiformats": "^4.5.0"
   },
   "devDependencies": {
+    "@multiformats/blake2": "^0.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "ava": "^3.15.0",
