chore: exclude test files from production build

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,6 +6,7 @@
     "outDir": "./dist"
   },
   "exclude": [
-    "./src/**/*.test.ts"
+    "./src/**/__tests__/*.ts",
+    "./src/**/__helpers__/*.ts"
   ]
 }
